# sansproto

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
sansproto/: __init__.py  compat.py
tests/: test_sansproto.py  typecheck.py
