[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sansproto", "tests"]
exclude = ["bench.py"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
source = ["sansproto"]

[tool.coverage.report]
fail_under = 100
