[metadata]
name = sansproto
version = attr: sansproto.version
author = Anton Bobrov
author_email = baverman+pypi@gmail.com
description = Sans-I/O helpers for byte stream protocol parsers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baverman/sansproto
project_urls =
    Source = https://github.com/baverman/sansproto
    Issues = https://github.com/baverman/sansproto/issues
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6

[options.package_data]
sansproto = py.typed

[options.packages.find]
exclude = tests
